<resources>
    <string name="app_name" translatable="false">OpenEvent</string>

    <string name="title_section_tracks">Tracks</string>
    <string name="title_section_speakerlist">Speakers</string>
    <string name="title_section_location">Locations</string>
    <string name="item_track">This is a track symbol.</string>
    <string name="session_bookmark_status">This image shows the session bookmark status.</string>
    <string name="session_speaker_icon">This is the speaker icon.</string>
    <string name="session_share_icon">This is the share icon.</string>
    <string name="session_calender_icon">This is a calendar icon.</string>
    <string name="session_clock_icon">This is a clock icon.</string>
    <string name="session_location_icon">This is a location icon.</string>

    <!-- Download Progress -->
    <string name="downloading_format">Downloading %s…</string>
    <string name="event_info">Event Info</string>
    <string name="sessions">Sessions</string>

    <!-- Main menu_speakers -->
    <string name="menu_home">Home</string>
    <string name="menu_tracks">Tracks</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_sponsor">Sponsors</string>
    <string name="menu_map">Map</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About us</string>
    <string name="session">Session Detail</string>
    <string name="menu_schedule">Schedule</string>
    <string name="descriptionEmpty">Description: To be updated soon</string>


    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Settings-->
    <string name="settings_mode_download">Download updates only on WiFi</string>
    <string name="summary_mode_download">If on app will not use Mobile Data to update Schedule</string>
    <string name="download_mode_key">internet_mode</string>
    <string name= "notification_interval_title">Notification Interval Time</string>

    <string name="settings_mode_notification"> Notification Mode</string>
    <string name="default_mode_notification">10 mins</string>
    <string name="notification_key">notification</string>

    <string name="settings_mode_timezone"> Show Local Times</string>
    <string name="summary_mode_timezone">Use your local time instead of the Conference\'s Local Time</string>
    <string name="timezone_mode_key">timezone_mode</string>

    <string name="language_preferences">Language Preferences</string>
    <string name="change_language">Change Your Language</string>
    <string name="language_key">change_language</string>
    <string name="default_mode_language">English</string>


    <!--Social-->
    <string name="linkedin" translatable="false">linkedin</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="fb" translatable="false">fb</string>
    <string name="github" translatable="false">github</string>

    <!--Menu Titles-->
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="add_to_calendar">Add to Calendar</string>


    <!--Search Titles-->
    <string name="global_search_hint">Search App</string>
    <string name="search_hint_tracks"> Search Tracks</string>
    <string name="refresh_failed">Couldn\'t Refresh</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_complete">Download Done</string>
    <string name="share_links">Sharing URL</string>
    <string name="time_not_specified">Timings not specified</string>

    <!--Error Titles-->
    <string name="net_unavailable">Network not available</string>
    <string name="turn_on">Turn on WiFi or Mobile data in Settings</string>
    <string name="error">Error</string>

    <string name="empty_list">No Bookmarks Available</string>
    <string name="bullet">"•"</string>
    <string name="bulletWithSpaces">"•  "</string>
    <string name="bookmarks">Bookmarks</string>

    <!--Speaker-->
    <string name="subject">Speaker profile</string>
    <string name="message_1"> is speaking at </string>
    <string name="message_2"> on the topics: </string>
    <string name="message_3"> For more information checkout this app on google play store: </string>
    <string name="fmt_floor">"Floor: "</string>
    <string name="noBookmark">No bookmarked session yet !!</string>

    <string name="invalid_url">Invalid Url</string>
    <string name="dialog_error_title">Error</string>
    <string name="website">website</string>
    <string name="menu_speaker_sort">Sort</string>
    <string name="dialog_sort_title">Sort By</string>
    <string name="dialog_filter_title">Filter by</string>

    <!--Speaker Sort Dialog text-->
    <string name="dialog_sort_by_organisation">Organisation</string>
    <string name="dialog_sort_by_country">Country</string>
    <string name="dialog_sort_by_speaker_name">Speaker Name</string>

    <!--Session Sort Dialog text-->
    <string name="dialog_sort_by_title">Title</string>
    <string name="dialog_sort_by_tracks">Tracks</string>
    <string name="dialog_sort_by_start_time">Start Time</string>


    <string name="launcher_icon" translatable="false">Launcher Icon</string>
    <string name="sponsor_image" translatable="false">Sponsor Image</string>
    <string name="header_image" translatable="false">Header Image</string>
    <string name="speaker_image" translatable="false">Speaker\'s Image</string>
    <string name="logo_widget" translatable="false">Logo Widget</string>
    <string name="backdrop_image" translatable="false">Backdrop Image</string>
    <string name="linkedin_icon" translatable="false">Linkedin Icon</string>
    <string name="twitter_icon" translatable="false">Twitter Icon</string>
    <string name="facebook_icon" translatable="false">Facebook Icon</string>
    <string name="github_icon" translatable="false">Github Icon</string>
    <string name="web_icon" translatable="false">Web Icon</string>
    <string name="download_assets">Do you want to update to the latest schedule now?</string>
    <string name="internet_preference_warning">Wifi Not available, do you want to display offline schedule? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noSessions">No Sessions yet!</string>
    <string name="noMicrolocations">No Microlocations yet!</string>
    <string name="noSchedule">No Schedule yet!</string>
    <string name="noSpeakers">No Speakers yet!</string>
    <string name="noSponsors">No Sponsors yet!</string>
    <string name="noTracks">No Tracks yet!</string>
    <string name="charges_warning">Data charges may apply</string>
    <string name="tracks">Track:</string>
    <string name="date">Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="location">Location:</string>
    <string name="speakers">Speaker</string>

    <!-- Sponsor types strings-->
    <string name="platinum">Platinum</string>
    <string name="diamond">Diamond</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>

    <!-- Sponsor types int strings-->
    <string name="platinumInt" translatable="false">1</string>
    <string name="diamondInt" translatable="false">2</string>
    <string name="goldInt" translatable="false">3</string>
    <string name="silverInt" translatable="false">4</string>
    <string name="bronzeInt" translatable="false">5</string>

    <string name="display_offline_schedule">No Internet connection, displaying old schedule</string>
    <string name="retry_download">Retry</string>
    <string name="permissions_given">Permissions Given!</string>
    <string name="storage_permission_rationale">Storage permission is needed for saving map data for offline availability.</string>
    <string name="permissions_insufficient">Go to settings and enable permission!</string>
    <string name="press_back_again">Tap back again to exit.</string>

    <!--SnackBar strings-->
    <string name="waiting_for_network">Waiting for network</string>
    <string name="snackbar_refresh_action">Refresh</string>

    <!--Notification strings-->
    <string name="check_connection">Check Connection</string>
    <string name="undo">Undo</string>
    <string name="open_your_web_brower_to_finish_connection_setting">Open your web browser to finish connection setting</string>
    <string name="removed_bookmark">Bookmark Removed</string>
    <string name="added_bookmark">Bookmark Added</string>

    <!--Share App strings-->
    <string name="whatsapp_promo_msg_template">Hey, join me at the event! - %s</string>
    <string name="error_msg_retry">Please Retry Again</string>
    <string name="app_share_url" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="share_app">Share App</string>
    <string name="invite_via_facebook">Invite Via Facebook</string>
    <string name="facebook_app_id">1786614831603417</string>
    <string name="share_fb_preview_url">https://lh3.googleusercontent.com/ai5OksP-YP6DdCuqCxE-97Kz9lEFu7VtDVnhfXB__h6K0gx3Rrl0mWM9mXsfMb19pqw=w300-rw</string>
    <string name="facebook">Facebook</string>
    <string name="invite_title">FOSSASIA Summit 2017</string>
    <string name="invite_content_description">Official FOSSASIA application for the annual summit 2017.  Download the current schedule and browse it offline.</string>

    <!--Branch integration strings-->
    <string name="branch_key_debug">key_test_gjCjmUMS5Dp6u7IukMSDujjhDwbPyjbB</string>
    <string name="branch_key_live">key_live_pavjjGHL2Al0qWQzjRQFvcddwscRvkcp</string>

    <!--Misc Strings-->
    <string name="time_separator" translatable="false">\u0020-\u0020</string>
    <string name="delimiter" translatable="false">,\u0020\u0020</string>

    <!--About Screen-->
    <string name="welcome_message">Welcome to FOSSASIA Summit 2017!</string>
    <string name="event_open">EVENT OPEN</string>
    <string name="event_venue">VENUE</string>
    <string name="organiser_description">ORGANISERS DESCRIPTION</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="more_details">For more details check </string>
    <string name="social_links">SOCIAL LINKS</string>
    <string name="location_not_decided">Not decided yet</string>

</resources>
